Button Alignment fixed

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -232,3 +232,8 @@ nav a:hover {
     flex-direction: column;
     align-items: center;
 }
+
+.post_controls {
+    display: flex;
+    flex-direction: row;
+}
